update pom file to include packagung configuration as well as enabling app to check for file paths to store the new created database